// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package auth.configs;

option go_package = "go.chromium.org/luci/auth_service/api/configspb";

// NOTE: There is another copy of this message, please be sure to keep both in
// sync.
//
// https://chromium.googlesource.com/infra/luci/luci-py/+/refs/heads/main/appengine/auth_service/proto/config.proto#130
//
// IP allowlists config: a set of named IP allowlists and a mapping between
// identity name -> IP allowlist to restrict it to.
message IPAllowlistConfig {
  message IPAllowlist {
    // Name of the IP allowlist.
    string name = 1;
    // List of subnets.
    repeated string subnets = 2;
    // Names of other IPAllowlist entities to include.
    repeated string includes = 3;
  }

  message Assignment {
    // Identity to restrict IPs to.
    string identity = 1;
    // Name of the corresponding IPAllowlist with a set of subnets.
    string ip_allowlist_name = 2;
  }

  // A set of named subnets.
  repeated IPAllowlist ip_allowlists = 1;
  // A mapping "identity name -> IP allowlist name".
  repeated Assignment assignments = 2;
}

// NOTE: There is another copy of this message, please be sure to keep both in
// sync.
//
// https://chromium.googlesource.com/infra/luci/luci-py/+/refs/heads/main/appengine/auth_service/proto/config.proto#114
//
// Legacy config, this is maintained to support clients still utilizing
// https://crsrc.org/i/luci/client/utils/oauth.py;l=419;drc=173496da114efb94dceedb58e588b9c58dabc5e9
//
// Global config. Includes OAuth client_id allowlist and token server URL.
//
// Provided via 'oauth.cfg' config file.
message OAuthConfig {
  // ClientID returned by /auth/api/v1/server/oauth_config endpoint to clients.
  string primary_client_id = 1;
  // Client secret (that's not really a secret, since it is visible) returned
  // by /auth/api/v1/server/oauth_config endpoint to clients. Corresponding
  // callback URL must be localhost or urn:ietf:wg:oauth:2.0:oob.
  string primary_client_secret = 2;
  // Allowlist of all accepted client_ids (in addition to the primary one).
  repeated string client_ids = 3;
  // URL of a token server to use to generate delegation tokens.
  string token_server_url = 4;
}